smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/strings/invalid-unicode-escape4.smithy
// Syntax error at line 4, column 16: Error parsing quoted string: Invalid hex character: `t` | Model
namespace smithy.example

@documentation("\uaaat")
string MyString
